# opencl-testing

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  TODO  cmake_install.cmake
.github/workflows/: all.yml  cc-windows.yml  docker.yml  linux.yml  mac.yml  windows.yml
cltuo/: CMakeLists.txt  clewTestC.c
include/: cmake_install.cmake
src/: CMakeLists.txt  a.out  main.cpp  mpi_util.cpp  runner.cpp  runner_id.cpp  too  too.cpp  too_old.cpp
src/cl/: 9_tuo.cpp  step.cpp  test.cpp  tuo.cpp  tyrant.cpp
src/clew/: cmake_install.cmake
src/clh/: 9_tuo.h  ocl.h  rng.h  test.h  tuo.h
src/h/: debug.h  mpi_util.h  runner.h  runner_mpi.h  runner_opencl.h  runner_openmp.h
src/runner/: CMakeLists.txt
src/runner/c/: mpi_util.cpp
src/runner/h/: runner.h  runner_id.h  runner_mpi.h  runner_opencl.h  runner_openmp.h
src/too/: CMakeLists.txt  main.cpp
src/too/c/: too.cpp
src/too/cl/: card.cpp  sim.cpp  sim_attack.cpp  state.cpp  tuo.cpp  tyrant.cpp
src/too/clh/: card.h  constants.h  deck.h  ocl.h  ocl_debug.h  sim.h  sim_attack.h  state.h  tuo.h  tyrant.h
src/tuo/: CMakeLists.txt  main.cpp
src/tuo/c/: cards.cpp  ocl_load.cpp  sim.cpp  tyrant_optimize.cpp  xml.cpp
src/tuo/h/: card.h  ocl_load.h  sim.h  tyrant.h  tyrant_optimize.h
test/: CMakeLists.txt  cmake_install.cmake  runner.cpp
test/benchmark/: CMakeLists.txt  benchmark.test.cpp
test/benchmark/clh/: ocl.h  test.h
test/clew/: CMakeLists.txt  clewTest  clewTestC  cmake_install.cmake
test/clhybrid/: CMakeLists.txt  clhybrid.cpp  tyrant.h
test/clhybrid/cl/: 9_tuo.cpp
test/clhybrid/clh/: 0_constants.h  1_rng.h  1_tyrant.h  2_card.h  9_tuo.h
test/opencl/: CMakeLists.txt  clewTTest  clewTTestC  clewTestC.c  cmake_install.cmake  openclTest.cpp  openclTestC.c  opencl_find_test.cpp  opencl_run_test.c
test/runner/: CMakeLists.txt  runner.test.cpp  runner_all.test.cpp  runner_cpu.test.cpp  runner_mpi.test.cpp  runner_opencl.test.cpp  runner_test.cpp  runner_test.h
test/runner/cl/: test.cpp
test/sim/: CMakeLists.txt  sim_attack.test.cpp
test/test/: CMakeLists.txt
test/too/: CMakeLists.txt  too.test.cpp
tmp/: CMakeLists.txt  cl.cpp  clew.cpp  test.cpp
tmp/src/: New Text Document.txt
